--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@reduxjs/toolkit": "^1.5.1",
     "@types/node": "^15.0.1",
     "@types/react": "^17.0.4",
     "bootstrap": "^4.6.0",
@@ -19,6 +20,9 @@
     "react": "17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-persist": "^6.0.0",
     "typescript": "^4.2.4"
   }
 }
