--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@reduxjs/toolkit": "^1.5.1",
     "@types/node": "^15.0.1",
     "@types/react": "^17.0.4",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "js-cookie": "^2.2.1",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-bootstrap": "^1.5.2",
