--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^17.0.4",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "date-fns": "^2.21.3",
     "js-cookie": "^2.2.1",
     "next": "10.2.0",
     "react": "17.0.2",
